tests/gabc-dump/should-fail/clef-too-high.gabc
name: clef too high;
%%
(c5) g(g)
